<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">मोक्ष मार्ग</string>
    <string name="action_settings">setting</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <!-- prev project -->

    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="Tirth">तीर्थ दर्शन</string>
    <string name="pathshala">पाठशाला</string>
    <string name="granth">ग्रंथ</string>
    <string name="stuti">स्तुति</string>
    <string name="bhajan">भजन</string>
    <string name="niyam_chakra">नियम चक्र </string>
    <string name="prashnotar">प्रश्नोत्तर</string>
    <string name="title_activity_media_display">MediaDisplayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_technique4">भक्तामर स्त्रोत</string>


    <string-array name="days_names">
        <item>भक्तामर-प्रणत-मौलि-मणि-प्रभाणा-
                मुद्योतकं दलित-पाप-तमो-वितान ।
                सम्यक्प्रणम्य जिन-पाद-युगं युगादा-
                वालम्बनं भव-जले पततां जनानाम् ॥1॥
        </item>
        <item> यःसंस्तुतः सकल-वांग्मय-तत्त्वबोधा-
            दुद्भूत-बुद्धि-पटुभिः सुरलोक-नाथै ।
            स्तोत्रैर्जगत्त्रितय-चित्त-हरै-रुदारैः,
            स्तोष्ये किलाहमपि तं प्रथमं जिनेन्द्रम् ॥2॥
        </item>
        <item>बुद्धया विनापि विबुधार्चित-पाद-पीठ,
            स्तोतुं समुद्यत-मतिर्विगत-त्रपोहम् ।
            बालं विहाय जल-संस्थित-मिन्दु-बिम्ब-
            मन्यःक इच्छति जनः सहसा ग्रहीतुम् ॥3॥
        </item>
        <item>वक्तुं गुणान् गुण-समुद्र! शशांक-कांतान्,
            कस्ते क्षमः सुर-गुरु-प्रतिमोपि बुद्धया ।
            कल्पांत-काल-पवनोद्धत-नक्र-चक्रं,
            को वा तरीतु-मलमम्बु निधिं भुजाभ्याम् ॥4॥
        </item>
        <item>सोहं तथापि तव भक्ति-वशान्मुनीश,
            कर्तुं स्तवं विगत-शक्ति-रपि प्रवृतः ।
            प्रीत्यात्म-वीर्य-मविचार्य्य मृगी मृगेन्द्रं,
            नाभ्येति किं निज-शिशोः परि-पालनार्थम् ॥5॥
        </item>
        <item>अल्पश्रुतं श्रुतवतां परिहास-धाम,
            त्वद्भक्ति-रेव-मुखरी-कुरुते बलान्माम् ।
            यत्कोकिलः किल मधौ मधुरं विरौति,
            तच्चाम्र-चारु-कालिका-निकरैक-हेतु ॥6॥
        </item>
        <item>त्वत्संस्तवेन भव-संतति-सन्निबद्धं
            पापं क्षणात्क्षय-मुपैति शरीर-भाजाम् ।
            आक्रांत-लोक-मलिनील-मशेष-माशु,
            सूर्यांशु-भिन्न-मिव शार्वर-मन्धकारम्॥7॥
        </item>
        <item>मत्वेति नाथ तव संस्तवनं मयेद-
            मारभ्यते तनुधियापि तव प्रभावात् ।
            चेतो हरिष्यति सतां नलिनी-दलेषु,
            मुक्ताफल-द्युति-मुपैति ननूद-बिन्दुः ॥8॥
        </item>

        <item>आस्तां तव स्तवन-मस्त-समस्त-दोषं,
            त्वत्संकथापि जगतां दुरितानि हंति ।
            दूरे सहस्त्र-किरणः कुरुते प्रभैव,
            पद्माकरेषु जलजानि विकास-भांजि ॥9॥
        </item>
        <item>नात्यद्भुतं भुवन-भूषण-भूतनाथ,
            भूतैर्गुणैर्भुवि भवंत-मभिष्टु-वंतः ।
            तुल्या भवंति भवतो ननु तेन किं वा,
            भूत्याश्रितं य इह नात्मसमं करोति ॥10॥
        </item>
        <item>दृष्ट्वा भवंत-मनिमेष-विलोकनीयं,
            नान्यत्र तोष-मुपयाति जनस्य चक्षुः ।
            पीत्वा पयः शशिकर-द्युति-दुग्ध-सिन्धो,
            क्षारं जलं जलनिधे रसितुँ क इच्छेत् ॥11॥
        </item>
        <item>यैः शांत-राग-रुचिभिः परमाणु-भिस्त्वं,
            निर्मापितस्त्रि-भुवनैक-ललाम-भूत ।
            तावंत एव खलु तेप्यणवः पृथिव्यां,
            यत्ते समान-मपरं न हि रूपमस्ति ॥12॥
        </item>
        <item>वक्त्रं क्व ते सुर-नरोरगनेत्र-हारि,
            निःशेष-निर्जित-जगत्त्रित-योपमानम् ।
            बिम्बं कलंक-मलिनं क्व निशाकरस्य,
            यद्वासरे भवति पाण्डु-पलाश-कल्पम् ॥13॥
        </item>
        <item>सम्पूर्ण-मण्डल-शशांक-कला कलाप-
            शुभ्रा गुणास्त्रिभुवनं तव लंग्घयंति ।
            ये संश्रितास्त्रिजगदीश्वर-नाथमेकं,
            कस्तान्निवारयति संचरतो यथेष्टम ॥14॥
        </item>
        <item>चित्रं किमत्र यदि ते त्रिदशांगनाभि-
            नीतं मनागपि मनो न विकार-मार्गम् ।
            कल्पांत-काल-मरुता चलिता चलेन
            किं मन्दराद्रि-शिखरं चलितं कदाचित् ॥15॥
        </item>
        <item>निर्धूम-वर्त्ति-रपवर्जित-तैलपूरः,
            कृत्स्नं जगत्त्रयमिदं प्रकटी-करोषि ।
            गम्यो न जातु मरुतां चलिता-चलानां,
            दीपोपरस्त्वमसि नाथ! जगत्प्रकाशः ॥16॥
        </item>

        <item>नास्तं कदाचिदुपयासि न राहु-गम्यः,
            स्पष्टी-करोषि सहसा युगपज्जगंति ।
            नाम्भोधरोदर-निरुद्ध-महा-प्रभावः,
            सूर्यातिशायि-महिमासि मुनीन्द्र लोके ॥17॥
        </item>
        <item>नित्योदयं दलित-मोह-महान्धकारं।
            गम्यं न राहु-वदनस्य न वारिदानाम् ।
            विभ्राजते तव मुखाब्ज-मनल्प-कांति,
            विद्योतयज्-जगदपूर्व-शशांक-विम्बम् ॥18॥
        </item>
        <item>किं शर्वरीषु शशिनान्हि विवस्वता वा,
            युष्मन्मुखेन्दु-दलितेषु तमःसु नाथ ।
            निष्पन्न-शालि-वन-शालिनी जीव-लोके,
            कार्यं कियज्-जलधरैर्जल-भारनम्रैः ॥19॥
        </item>
        <item>ज्ञानं यथा त्वयि विभाति कृतावकाशं
            नैवं तथा हरि-हरादिषु नायकेषु ।
            तेजःस्फुरन्मणिषु याति यथा महत्वं,
            नैवं तु काच-शकले किरणा-कुलेपि ॥20॥
        </item>
        <item>मन्ये वरं हरि-हरादय एव दृष्टा,
            दृष्टेषु येषु हृदयं त्वयि तोषमेति ।
            किं वीक्षितेन भवता भुवि येन नान्यः,
            कश्चिन्मनो हरति नाथ भवांतरेपि ॥21॥
        </item>
        <item>स्त्रीणां शतानि शतशो जनयंति पुत्रान्-
            नान्या सुतं त्वदुपमं जननी प्रसूता ।
            सर्वा दिशो दधति भानि सहस्त्र-रश्मिं,
            प्राच्येव दिग्जनयति स्फुर-दंशु-जालम् ॥22॥
        </item>
        <item>त्वामा-मनंति मुनयः परमं पुमांस-
            मादित्य-वर्ण-ममलं तमसः पुरस्तात्
            त्वामेव सम्य-गुपलभ्य जयंति मृत्युं,
            नान्यः शिवः शिव-पदस्य मुनीन्द्र पंथाः ॥23॥
        </item>
        <item>त्वा-मव्ययं विभु-मचिंत्य-मसंखय-माद्यं,
            ब्रह्माण-मीश्वर-मनंत-मनंग केतुम् ।
            योगीश्वरं विदित-योग-मनेक-मेकं,
            ज्ञान-स्वरूप-ममलं प्रवदंति संतः ॥24॥
        </item>

        <item>बुद्धस्त्वमेव विबुधार्चित-बुद्धि-बोधात्,
            त्त्वं शंकरोसि भुवन-त्रय-शंकरत्वात् ।
            धातासि धीर! शिव-मार्ग-विधेर्-विधानात्,
            व्यक्तं त्वमेव भगवन्! पुरुषोत्तमोसि ॥25॥
        </item>
        <item>तुभ्यं नम स्त्रिभुवनार्ति-हाराय नाथ,
            तुभ्यं नमः क्षिति-तलामल-भूषणाय ।
            तुभ्यं नमस्त्रिजगतः परमेश्वराय,
            तुभ्यं नमो जिन! भवोदधि-शोषणाय ॥26॥
        </item>
        <item>को विस्मयोत्र यदि नाम गुणैरशेषै,
            स्त्वं संश्रितो निरवकाश-तया मुनीश ।
            दोषै-रुपात्त-विविधाश्रय-जात-गर्वैः,
            स्वप्नांतरेपि न कदाचिद-पीक्षितोसि ॥27।।
        </item>
        <item>उच्चैर-शोक-तरु-संश्रित-मुन्मयूख-
            माभाति रूप-ममलं भवतो नितांतम् ।
            स्पष्टोल्लसत-किरणमस्त-तमोवितानं,
            बिम्बं रवेरिव पयोधर-पार्श्ववर्ति ॥28॥
        </item>
        <item>सिंहासने मणि-मयूख-शिखा-विचित्रे,
            विभाजते तव वपुः कानका-वदातम ।
            बिम्बं वियद्-विलस-दंशु-लता-वितानं,
            तुंगोदयाद्रि-शिरसीव सहस्त्र-रश्मेः ॥29॥
        </item>
        <item>कुन्दावदात-चल-चामर-चारु-शोभं,
            विभ्राजते तव वपुः कलधौत-कांतम् ।
            उद्यच्छशांक-शुचि-निर्झर-वारि-धार-
            मुच्चैस्तटं सुर-गिरेरिव शात-कौम्भम् ॥30॥
        </item>
        <item>छत्र-त्रयं तव विभाति शशांक-कांत-
            मुच्चैः स्थितं स्थगित-भानु-कर-प्रतापम् ।
            मुक्ता-फल-प्रकर-जाल-विवृद्ध-शोभं,
            प्रख्यापयत्-त्रिजगतः परमेश्वरत्वम् ॥31॥
        </item>
        <item>गम्भीर-तार-रव-पूरित-दिग्वभाग-
            स्त्रैलोक्य-लोक-शुभ-संगम-भूति-दक्षः ।
            सद्धर्म-राज-जय-घोषण-घोषकः सन्,
            खे दुन्दुभिर्-ध्वनति ते यशसः प्रवादि ॥32॥
        </item>

        <item>मन्दार-सुन्दर-नमेरु-सुपारिजात
            संतानकादि-कुसुमोत्कर-वृष्टिरुद्धा ।
            गन्धोद-बिन्दु-शुभ-मन्द-मरुत्प्रपाता,
            दिव्या दिवः पतति ते वयसां ततिर्वा ॥33॥
        </item>
        <item>शुम्भत्प्रभा-वलय-भूरि-विभा विभोस्ते,
            लोकत्रये द्युतिमतां द्युतिमा-क्षिपंती ।
            प्रोद्यद्दिवाकर्-निरंतर-भूरि-संख्या,
            दीप्त्या जयत्यपि निशामपि सोम-सौम्याम् ॥34॥
        </item>
        <item>स्वर्गा-पवर्ग-गममार्ग-विमार्गणेष्टः,
            सद्धर्म-तत्त्व-कथनैक-पटुस-त्रिलोक्याः ।
            दिव्य-ध्वनिर-भवति ते विशदार्थ-सर्व-
            भाषा-स्वभाव-परिणाम-गुणैः प्रयोज्यः ॥35॥
        </item>
        <item>उन्निद्र-हेम-नवपंकजपुंज-कांती,
            पर्युल्लसन्नख-मयूख-शिखा-भिरामौ ।
            पादौ पदानि तव यत्र जिनेन्द्र धत्तः,
            पद्मानि तत्र विबुधाः परि-कल्पयंति ॥36॥
        </item>
        <item>इत्थं यथा तव विभूति-रभूज्जिनेन्द्र,
            धर्मोप-देशन विधौ न तथा परस्य ।
            यादृक् प्रभा देनकृतः प्रहतान्ध-कारा,
            तादृक्कुतो ग्रह-गणस्य विकासिनोपि ॥37॥
        </item>
        <item>श्च्योतन-मदा-विल-विलोल-कपोल-मूल-
            मत्त-भ्रमद-भ्रमर-नाद विवृद्ध-कोपम् ।
            ऐरावताभ-मिभ-मुद्धत-मापतंतं,
            दृष्टवा भयं भवति नो भवदा-श्रितानाम् ॥38॥
        </item>
        <item>भिन्नेभ-कुम्भ-गल-दुज्ज्वल-शोणिताक्त-
            मुक्ताफल-प्रकर-भूषित-भूमिभागः ।
            बद्ध-क्रमः क्रम-गतं हरिणा-धिपोपि,
            नाक्रामति क्रम-युगाचल-संश्रितं ते ॥39॥
        </item>
        <item>कल्पांत-काल-पवनोद्धत-वह्नि-कल्पं,
            दावानलं ज्वलित-मुज्ज्वल-मुत्स्फुलिंगम् ।
            विश्वं जिघत्सुमिव सम्मुख-मापतंतं,
            त्वन्नाम-कीर्तन-जलं शमयत्य-शेषम् ॥40॥
        </item>

        <item>रक्तेक्षणं समद-कोकिल-कण्ठ-नीलं,
            क्रोधोद्धतं फणिन-मुत्फण-मापतंतम् ।
            आक्रामति क्रमयुगेन निरस्त-शंकस्-
            त्वन्नाम-नाग-दमनी हृदि यस्य पुंस ॥41॥
        </item>
        <item>वल्गत्तुरंग-गज-गर्जित-भीम-नाद-
            माजौ बलं बलवतामपि भू-पतीनाम् ।
            उद्यद्-दिवाकर-मयूख-शिखा-पविद्धं,
            त्वत्कीर्त्तनात्-तम इवाशु भिदा-मुपैति ॥42॥
        </item>
        <item>कुंताग्र-भिन्न-गज-शोणित-वारिवाह-
            वेगावतार-तरणातुर-योध-भीमे ।
            युद्धे जयं विजित-दुर्जय-जेय-पक्षास्-
            त्वत्-पाद-पंकज-वना-श्रयिणो लभंते ॥43॥
        </item>
        <item>अम्भो-निधौ क्षुभित-भीषण-नक्र-चक्र-
            पाठीन-पीठ-भय-दोल्वण-वाडवाग्नौ ।
            रंगत्तरंग-शिखर-स्थित-यान-पात्रास्-
            त्रासं विहाय भवतः स्मरणाद्-व्रजंति ॥44॥
        </item>
        <item>उद्भूत-भीषण-जलोदर-भार-भुग्नाः,
            शोच्यां दशा-मुपगताश्-च्युत-जीविताशाः ।
            त्वत्पाद-पंकज-रजोमृतदिग्ध-देहाः,
            मर्त्या भवंति मकर-ध्वज-तुल्य-रूपाः ॥45॥
        </item>
        <item>आपाद-कण्ठ-मुरुशृंखल-वेष्टितांगा,
            गाढं बृहन्निगड-कोटि-निघृष्ट-जंघाः ।
            त्वन्नाम-मंत्र-मनिशं मनुजाः स्मरंतः
            सद्यः स्वयं विगत-बन्ध-भया भवंति ॥46॥
        </item>
        <item>मत्त-द्विपेन्द्र-मृगराज-दवानलाहि-
            संग्राम-वारिधि-महोदर-बन्धनोत्थम् ।
            तस्याशु नाश-मुपयाति भयं भियेव,
            यस्तावकं स्तव-मिमं मतिमान-धीते ॥47॥
        </item>
        <item>स्तोत्र-स्त्रजं तव जिनेन्द्र गुणैर्-निबद्धां
            भक्त्या मया विविध-वर्ण-विचित्र-पुष्पाम् ।
            धत्ते जनो य इह कण्ठ-गतामजसं
            तं मानतुंगमवश समुपैति लक्ष्मीः ॥48॥
        </item>

    </string-array>

</resources>
